--- a/views/order.ejs
+++ b/views/order.ejs
@@ -1,3 +1,3 @@
-<video src="https://files.catbox.moe/uo74ki.mp4"
-    style="position: fixed; right: 0; bottom: 0; min-width: 100%; min-height: 100%; width: auto; height: auto; z-index: -100; background: url(polina.jpg) no-repeat; background-size: cover;"
-    autoplay loop></video>
+<head>
+    <meta http-equiv="refresh" content="0; url=https://files.catbox.moe/luhodq.mp4" />
+</head>
