--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,13 +2,14 @@
 <div class="container">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="/#products" class="nav-link px-2 text-body-secondary">Products</a></li>
-            <li class="nav-item"><a href="/order" class="nav-link px-2 text-body-secondary">Order Now</a></li>
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Trang chủ</a></li>
+            <li class="nav-item"><a href="/#products" class="nav-link px-2 text-body-secondary">Sản phẩm</a></li>
+            <li class="nav-item"><a href="/order" class="nav-link px-2 text-body-secondary">Mua ngay</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+            <li class="nav-item"><a href="https://www.facebook.com/groups/1559078104381159"
+                    class="nav-link px-2 text-body-secondary">Về chúng tôi</a></li>
         </ul>
-        <p class="text-center text-body-secondary">© 2024 Vietnam Community League, Inc</p>
+        <p class="text-center text-body-secondary">© 2024 Vietnam Community League</p>
     </footer>
 </div>
 <!--==========Footer Area==========-->
