--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,16 +1,16 @@
 <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/"
-            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <span><img class="logo" src="/images/rmit-store-logo.png" alt="RMIT logo"></span>
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <span><img class="logo" src="/images/thiphamshop_logo.png" alt="RMIT logo"></span>
         </a>
 
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="/#products" class="nav-link">Products</a></li>
-            <li class="nav-item"><a href="/order" class="nav-link">Order Now</a></li>
+            <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Trang chủ</a></li>
+            <li class="nav-item"><a href="/#" class="nav-link">Sản phẩm</a></li>
+            <li class="nav-item"><a href="/order" class="nav-link">Mua ngay</a></li>
             <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="https://www.facebook.com/groups/1559078104381159" class="nav-link">Về chúng
+                    tôi</a></li>
         </ul>
     </header>
 </div>
