feat: final changes, add start script, fix typo, include docker configuration

--- a/views/partials/banner.ejs
+++ b/views/partials/banner.ejs
@@ -1,6 +1,6 @@
 <!--==========Banner Section==========-->
 
-<div class="px-4 pt-5 my-5 text-center border-bottom">
+<div class="px-4 my-5 text-center border-bottom">
     <h1 class="display-4 fw-bold text-body-emphasis">
         ThiPham.shop - Shop ThiPham cho người Việt
     </h1>
@@ -11,12 +11,6 @@
             những sản phẩm chất lượng cao cho người mua.
         </p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <a href="#pricing" class="nav-link"><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
-                    Products
-                </button></a>
-            <a href="/order-page" class="nav-link"><button type="button" class="btn btn-danger btn-lg px-4">
-                    Order Now!
-                </button></a>
         </div>
     </div>
     <!-- <div class="overflow-hidden" style="max-height: 50vh;">
